# quantech-quda-sdk

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_quda.py
quda/: __init__.py  circuit.py  decorators.py  field.py  state.py
quda/hal/: __init__.py  google.py  ibm.py  ionq.py  simulator.py
